// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields from job.columns (7.13+ generated) cells can be multi-value 1`] = `
"producttruecategory
coconuttrue\\"cool, rad\\"
"
`;

exports[`fields from job.columns (7.13+ generated) columns can be top-level fields such as _id and _index 1`] = `
"\\"_id\\"true\\"_index\\"trueproducttruecategory
\\"my-cool-id\\"true\\"my-cool-index\\"truecoconuttrue\\"cool, rad\\"
"
`;

exports[`fields from job.columns (7.13+ generated) default column names come from tabify 1`] = `
"\\"_id\\"true\\"_index\\"true\\"_score\\"truecategorytrueproduct
\\"my-cool-id\\"true\\"my-cool-index\\"true\\"'-\\"true\\"cool, rad\\"truecoconut
"
`;

exports[`fields from job.searchSource.getFields() (7.12 generated) cells can be multi-value 1`] = `
"\\"_id\\"truesku
\\"my-cool-id\\"true\\"This is a cool SKU., This is also a cool SKU.\\"
"
`;

exports[`fields from job.searchSource.getFields() (7.12 generated) provides top-level underscored fields as columns 1`] = `
"\\"_id\\"true\\"_index\\"truedatetruemessage
\\"my-cool-id\\"true\\"my-cool-index\\"true\\"2020-12-31T00:14:28.000Z\\"true\\"it's nice to see you\\"
"
`;

exports[`fields from job.searchSource.getFields() (7.12 generated) sorts the fields when they are to be used as table column names 1`] = `
"\\"_id\\"true\\"_index\\"true\\"_score\\"truedatetrue\\"message_t\\"true\\"message_u\\"true\\"message_v\\"true\\"message_w\\"true\\"message_x\\"true\\"message_y\\"true\\"message_z\\"
\\"my-cool-id\\"true\\"my-cool-index\\"true\\"'-\\"true\\"2020-12-31T00:14:28.000Z\\"true\\"test field T\\"true\\"test field U\\"true\\"test field V\\"true\\"test field W\\"true\\"test field X\\"true\\"test field Y\\"true\\"test field Z\\"
"
`;

exports[`formats a search result to CSV content 1`] = `
"datetrueiptruemessage
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"This is a great message!\\"
"
`;

exports[`formats an empty search result to CSV content 1`] = `
"datetrueiptruemessage
"
`;

exports[`formulas can check for formulas, without escaping them 1`] = `
"datetrueiptruemessage
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"=SUM(A1:A2)\\"
"
`;

exports[`formulas escapes formula values in a cell, doesn't warn the csv contains formulas 1`] = `
"datetrueiptruemessage
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"'=SUM(A1:A2)\\"
"
`;

exports[`formulas escapes formula values in a header, doesn't warn the csv contains formulas 1`] = `
"datetrueiptrue\\"'=SUM(A1:A2)\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"This is great data\\"
"
`;

exports[`keeps order of the columns during the scroll 1`] = `
"\\"_id\\"true\\"_index\\"true\\"_score\\"trueatrueb
\\"'-\\"true\\"'-\\"true\\"'-\\"truea1trueb1
\\"'-\\"true\\"'-\\"true\\"'-\\"true\\"'-\\"trueb2
\\"'-\\"true\\"'-\\"true\\"'-\\"truea3true\\"'-\\"truec3
"
`;

exports[`uses the pit ID to page all the data 1`] = `
"datetrueiptruemessage
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from the initial search\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"hit from a subsequent scroll\\"
"
`;

exports[`warns if max size was reached 1`] = `
"datetrueiptruemessage
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"super cali fragile istic XPLA docious\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"super cali fragile istic XPLA docious\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"super cali fragile istic XPLA docious\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"super cali fragile istic XPLA docious\\"
\\"2020-12-31T00:14:28.000Z\\"true\\"110.135.176.89\\"true\\"super cali fragile istic XPLA docious\\"
"
`;
